@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.meefik.linuxdeploy"
-    android:versionCode="55"
+    android:versionCode="56"
     android:versionName="1.3.6" >
 
     <uses-sdk
